# tempmail

./: .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: github_actions_security.yml  lint-pr.yml  lint.yml  publish-release.yml  test-pull-request.yml  typo.yml
examples/: Cargo.toml  README.md  custom_email.rs  random_email.rs
src/: lib.rs  main.rs
