[package]
authors       = ["Dilshad <a-rustacean@outlook.com>"]
categories    = ["email", "api", "tempmail"]
description   = "Simplify temporary email management and interaction, including message retrieval and attachment downloads."
documentation = "https://docs.rs/tempmail"
edition       = "2021"
keywords      = ["tempmail", "api", "email", "1secmail", "wrapper"]
license       = "MIT"
name          = "tempmail"
repository    = "https://github.com/a-rustacean/tempmail"
version       = "0.2.4"
rust-version  = "1.64"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono     = "0.4.26"
reqwest    = { version = "0.12.0", features = ["json"] }
serde      = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
