[package]
authors       = ["Dilshad <a-rustacean@outlook.com>"]
categories    = ["email", "api-bindings"]
description   = "Simplify temporary email management and interaction, including message retrieval and attachment downloads."
documentation = "https://docs.rs/tempmail"
edition       = "2021"
keywords      = ["tempmail", "api", "email", "1secmail", "wrapper"]
license       = "MIT"
name          = "tempmail"
repository    = "https://github.com/a-rustacean/tempmail"
rust-version  = "1.70"
version       = "1.0.1"
exclude       = ["examples"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono     = "0.4"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tokio    = { version = "1.48", features = ["full"] }
