[package]
edition = "2021"
name    = "examples"
publish = false
version = "0.0.0"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
tempmail = { path = "../" }
tokio    = { version = "1.32", features = ["full"] }

[[example]]
name = "custom_email"
path = "custom_email.rs"

[[example]]
name = "random_email"
path = "random_email.rs"
